entered and fixed overlapping text

--- a/css/main.css
+++ b/css/main.css
@@ -71,10 +71,7 @@ svg {
   width: 200px;
   height: auto;
   opacity: 1;
-}
-
-svg:hover {
-  opacity: 0;
+  z-index: 10000;
 }
 
 h1 {
@@ -90,50 +87,31 @@ h1 {
   width: 100%;
 }
 
-h2 {
-  text-align: center;
+.header0 {
   color: #fff;
   font-family: sans-serif;
   padding: 3rem;
   margin: 0;
   top: 0;
-  z-index: 10000;
   width: 100%;
 }
 
 figure {
   position: relative;
   z-index: 500;
-  height: 300px;
+  width: 250px;
+  padding: 2rem;
+  margin: 0;
 }
-/*
-figure:hover {
-  opacity: 0;
-}*/
 
 figcaption {
   color: #00aeef;
   text-align: center;
   padding: .5rem;
-  position: absolute;
-  top: 0px;
-
+  width: 220px;
 }
-
-.scale figcaption {
-  transform: scale(1,1);
-  transition: all 300ms linear;
-  opacity: 0;
-}
-
-.scale figcaption:hover {
-  transform: scale(1.1,1.1);
-  opacity: 1;
-}
-
 
 figcaption p {
   color: #000;
-  width: 250px;
 }
 
